# PC-migration-helper

./: .gitignore  BACKLOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
E:\/migration_backup/: pc_migration_final_20260620_122147.html  pc_migration_final_20260620_122147.json
E:\/migration_backup.7z/: pc_migration_final_20260620_122147.html  pc_migration_final_20260620_122147.json
config/: default_rules.yaml
scripts/: build.py  gen_i18n.py
src/: app.py  constants.py
src/migration/: compressor.py  copier.py  migration_worker.py
src/models/: file_entry.py  migration_config.py  migration_result.py  migration_target.py  scan_result.py
src/scanners/: disk_scanner.py  file_classifier.py  scan_worker.py
src/targets/: drive_detector.py  target_worker.py
src/ui/: execute_page.py  main_window.py  review_page.py  scan_page.py  target_page.py
src/ui/styles/: theme.qss
src/ui/widgets/: drive_list_widget.py  file_tree_filter.py  file_tree_model.py  file_tree_view.py  progress_widget.py  size_stats_widget.py  treemap_widget.py
src/utils/: browser_detector.py  checksum.py  human_size.py  i18n.py  logger.py  report_generator.py  win_utils.py
tests/: conftest.py  test_browser_detector.py  test_checksum.py  test_compressor.py  test_disk_scanner.py  test_drive_detector.py  test_file_classifier.py  test_file_tree_filter.py  test_file_tree_model.py  test_human_size.py  test_migration_result.py  test_migration_worker.py  test_models.py  test_report_generator.py  test_scan_worker.py  test_treemap_widget.py  test_win_utils.py
